# satellite

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: build.yml
scripts/: sync-version.mjs
src/: App.svelte  FloatingBall.svelte  HistoryList.svelte  MainWindow.svelte  RemoteFiles.svelte  Settings.svelte  Toast.svelte  app.css  formatUrl.js  toastStore.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  db.rs  lib.rs  remote.rs  upload.rs
